{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player",
            "id": "ef5f9f0f-e2bc-4be7-9fad-372a9f79d35a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1ea609cf-69cf-40c4-bf11-f06b7d70ee8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "31cad82d-79b2-455d-8a35-f7b9bf55bc07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouePosition",
                    "type": "Value",
                    "id": "24d552a5-b846-4cc2-bd22-e2b5dba1c2ff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheelY",
                    "type": "PassThrough",
                    "id": "f548a496-ac28-4a76-9d6d-7dbb7897c3b3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9a9d65c4-2d72-450d-895d-bd18d8fe2fff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "FireLMB",
                    "type": "PassThrough",
                    "id": "028c35d4-fe6e-4d7c-8af0-deb39e1f30e5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "33ccb65d-5c08-4e1f-8c8d-26a74c8b6498",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "57ca5fdd-242e-419b-87d1-d10a15032cf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "34ad7790-df6d-4938-89cb-02c45c451777",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "0cc1f696-8c48-4ede-a555-db9f58c9cd85",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Hold(duration=0.1,pressPoint=0.1)"
                },
                {
                    "name": "UseAction",
                    "type": "PassThrough",
                    "id": "aab937d0-2caa-4ced-b285-205d42eeb278",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "122615d8-f3e7-4ab5-9dff-bdecc98a94c2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7475e283-b52f-4558-95c4-e2ac3d71559c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2c62b889-5fd4-49fc-9121-077e75e91ed3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0969e580-3a44-4d56-a8d3-753717103767",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fb8a6e3e-62e2-4f5d-9702-8a2a2d2811ff",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d6aef746-a178-4629-ab1b-7f972bd5a830",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52fcebb1-553c-413c-9de6-68cafe21b9ac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireLMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c74f588e-303f-4b87-abce-f424c14f9803",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "948ec5fa-65a4-48ca-9731-07bd62bafa5c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dcde8ce-0c63-4bb1-8ac0-bbb76b5dde52",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheelY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cde0cbe3-9ef1-41d3-bd51-a53ce6b2520e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ab045bc-e5f6-4f18-8a2f-d001ae483d45",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bd4c1a0-5652-411d-8e96-3c63802f4bd8",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3771a5b7-55fc-4c03-b52d-2d2980739a81",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47d4090b-a4ed-4636-aca2-29398f6bed83",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}